Fri Mar 12 15:30:58 2004  Manish Singh  <yosh@gimp.org>

	* glib/gbacktrace.h: ia32's G_BREAKPOINT() implementation works on
	amd64 too. Enable it.

Fri Mar 12 15:21:22 2004  Manish Singh  <yosh@gimp.org>

	* glib/gatomic.c: Non-optimizing compile fails for two asm
	statements on PowerPC. Use generic implementaton for those
	cases. Spotted by Christof Petig <christof@petig-baender.de>,
	fix by Sebastian Wilhelmi. Bug #137006 has a possible alternate
	solution, but we'll be conservative for now.

Thu Mar 11 02:05:13 2004  Matthias Clasen  <maclas@gmx.de>

	* glib/gmain.c (g_main_depth): Remove an extra semicolon.
	Spotted by Kjartan Maraas.

2004-03-10  Tor Lillqvist  <tml@iki.fi>

	* glib/gspawn-win32.c
	* glib/gspawn-win32-helper.c: Implement
	G_SPAWN_FILE_AND_ARGV_ZERO. (#136792, Bruce Hochstetler)

	* tests/spawn-test.c
	* tests/spawn-test-win32-gui.c: Test it.

Tue Mar  9 09:16:11 2004  Owen Taylor  <otaylor@redhat.com>

	* === Released 2.3.6 ===

	* configure.in: Version 2.3.6, interface age 1.

	* NEWS: Updates

2004-03-09  Sebastian Wilhelmi  <seppi@seppi.de>

	* tests/child-test.c: Do not run the g_child_watch_* test
	multi-threaded, as that doesn't work on linux prior 2.6. Fixes
	#136539.

2004-03-08 Alastair McKinstry <mckinstry@computer.org>

	* configure.in: Added "ga" (Irish) to ALL_LINGUAS.

2004-03-07  Danilo Šegan  <dsegan@gmx.net>

	* configure.in: Added "sr@ije" to ALL_LINGUAS.

2003-03-07  Hans Breuer  <hans@breuer.org>

	* glib/gspawn-win32.c : (GPid)shortcut_spawn_retval which
	doesn't improve the implementation at all, it just make it 
	compile with msvc ...

	* glib/makefile.msc.in : build gatomic.c (now really:)
	
2004-03-06  Tor Lillqvist  <tml@iki.fi>

	* README.win32: Update.

	* configure.in
	* Makefile.am
	* */Makefile.am: Drop the hand-written makefile.mingw(.in)
	files. They haven't been maintained in a long time. As several
	people have managed to build GLib for Win32 using the